--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
+streamlit==1.43.0
+chromadb==0.6.3
+langchain==0.3.20
+langchain_huggingface==0.1.2
+langchain_groq==0.2.4
+sentence-transformers==3.4.1
 numpy
-PyPDF2
-langchain
-chromadb
-langchain-huggingface
-streamlit
-groq
-langchain_community
-sentence-transformers
-pysqlite3-binary 
+torch
+pysqlite3-binary  
