--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-streamlit>=1.33.0
-nest_asyncio>=1.6.0
-pandas
-PyPDF2>=3.0.1
-python-docx
-pysqlite3-binary>=3.35.0
-langchain>=0.0.148
-langchain-huggingface>=0.0.6
-langchain-community>=0.0.29
-langchain-groq>=0.1.0
-faiss-cpu>=1.7.2
 numpy
-chromadb>=0.4.24
+PyPDF2
+langchain
+chromadb
+langchain-huggingface
+streamlit
+groq
+langchain_community
+sentence-transformers
+pysqlite3-binary 
