--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ nest_asyncio>=1.6.0
 pandas
 PyPDF2>=3.0.1
 python-docx
+ChromaDB
 pysqlite3-binary>=0.5.0
 langchain>=0.0.148
 langchain-huggingface>=0.0.6
