--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-streamlit>=1.33.0
-nest_asyncio>=1.6.0
-pandas
-PyPDF2>=3.0.1
-python-docx
-ChromaDB
-pysqlite3-binary>=0.5.0
-langchain>=0.0.148
-langchain-huggingface>=0.0.6
-langchain-community>=0.0.29
-langchain-groq>=0.1.0
-faiss-cpu>=1.7.2
-numpy
-sqlite3>=3.35.0
+streamlit
+chromadb
+langchain
+langchain-huggingface
+langchain-groq
+sentence-transformers
+PyPDF2
