--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-streamlit
-chromadb
-langchain
-langchain-huggingface
-langchain-groq
-sentence-transformers
+numpy
 PyPDF2
-pysqlite3-binary
+langchain
+chromadb
+streamlit
+groq
+langchain_community
+langchain_groq
+sentence-transformers
+pysqlite3-binary 
+langchain_huggingface
+torch
