--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-numpy
-PyPDF2
-langchain
-chromadb
-streamlit
-groq
-langchain_community
-langchain_groq
-sentence-transformers
-pysqlite3-binary 
-langchain_huggingface
-torch
+pip install \
+    streamlit==1.31.1 \
+    torch==2.1.2 \
+    sentence-transformers==2.2.2 \
+    langchain==0.1.16 \
+    langchain-groq \
+    langchain-huggingface \
+    chromadb==0.4.24 \
+    PyPDF2
