--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-pip install \
-    streamlit==1.31.1 \
-    torch==2.1.2 \
-    sentence-transformers==2.2.2 \
-    langchain==0.1.16 \
-    langchain-groq \
-    langchain-huggingface \
-    chromadb==0.4.24 \
-    PyPDF2
+streamlit==1.31.1
+torch==2.1.2 
+sentence-transformers==2.2.2 
+langchain==0.1.16 
+langchain-groq 
+langchain-huggingface 
+chromadb==0.4.24 
+PyPDF
